# current-research-feature-effects

./: .gitignore  README.md  config.ini  pyproject.toml
analyses/: ablation_study_mc_error.ipynb  ablation_study_variance_decomposition.ipynb  groundtruth_effects.ipynb  main_study_analysis.ipynb  model_performance_analysis.ipynb
configs/: ablation_study_mc.ini  ablation_study_variance_decomposition.ini  datasets.yaml  main_study.ini  models.yaml  models_ablation_study.yaml
current_research_feature_effects/: feature_effects.py  main.py  mappings.py  model_eval.py  model_training.py  utils.py
current_research_feature_effects/data_generating/: __init__.py  data_generation.py  friedman1.py  physics_data.py  simple.py
current_research_feature_effects/plotting/: __init__.py  plots.py  table_formatting.py  utils.py
experiments/ablation_study_mc/Friedman1/: ablation_results.joblib  grid_values.joblib
experiments/ablation_study_mc/SimpleNormalCorrelated/: ablation_results.joblib  grid_values.joblib
experiments/ablation_study_mc_error/: ablation_study_mc.ini
experiments/ablation_study_mc_error/Friedman1/: ablation_results.joblib  groundtruth.joblib
experiments/ablation_study_variance_decomposition_new/: ablation_study_variance_decomposition.ini
experiments/main_study/: main_study.ini
experiments/main_study_new/: main_study.ini
experiments/main_study_parallel/: main_study.ini
paper/: mybibliography.bib  paper.tex  readme.txt
scripts/: ablation_study_mc.py  ablation_study_variance_decomposition.py  main.py
(+185 files in other folders)
