[tool.poetry]
name = "current_research_feature_effects"
version = "0.1.0"
description = ""
authors = ["Timo Heiß <ti-heiss@t-online.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
optuna = "^3.6.0"
pandas = "^2.2.1"
seaborn = "^0.13.2"
xgboost = "^2.0.3"
pygam = "^0.9.1"
matplotlib = "^3.10.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
